# vdif2spec

./: Cargo.toml  LICENSE.txt  README.md  vdif2spec.py
src/: main.rs
vdif2spec-rust/: Cargo.toml
vdif2spec-rust/src/: main.rs
vdif2spec/src/: main.rs
