[package]
name = "vdif2spec"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
authors = ["Masanori AKIMOTO"]
description = "This program make a spectrum graph of a VDIF format. cargo version: 1.85.0 (d73d2caf9 2024-12-31)，rustc version: 1.85.0 (4d91de4e4 2025-02-17)，rustup version : 1.27.1 (54dd3d00f 2024-04-24)"


[dependencies]
plotters = "0.3"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.10"
realfft = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }
png = "0.17"
imagequant = "4"
